fixed alignment of page

--- a/app/assets/stylesheets/final_pics/_show.scss
+++ b/app/assets/stylesheets/final_pics/_show.scss
@@ -24,5 +24,14 @@
 }
 
 img {
-  width: 100%
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 3px;
+  box-shadow: 0px 0px 3px #E3E3DE;
+  margin-bottom: 10px;
+}
+
+button {
+  margin: 5px;
 }
